<?xml version="1.0"?>
<package format="2">
  <name>RoboMaid_sim</name>
  <version>0.1.0</version>
  <description>A Package that perform simulation on gazebo for the RoboMaid Project</description>
  <author email="eng.ahmedaliahmed535@gmail.com">Ahmed Ali</author>
  <buildtool_depend>catkin</buildtool_depend>
    <run_depend>controller_manager</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rqt_robot_steering</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>urdf_tutorial</run_depend>
  <run_depend>xacro</run_depend>
</package>
