<?xml version="1.0"?>
<package format="2">
  <name>RoboMaid_sim</name>
  <version>0.1.0</version>
  <description>A Package that perform simulation on gazebo for the RoboMaid Project</description>
  <author email="eng.ahmedaliahmed535@gmail.com">Ahmed Ali</author>

  <maintainer email="eng.ahmedaliahmed535@gmail.com">Ahmed Ali</maintainer>
  <license>no-license</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rqt_robot_steering</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>slam_karto</exec_depend>
  <exec_depend>hector_mapping</exec_depend>


</package>
